# leftbookclub

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .prettierignore  Aptfile  Dockerfile  Dockerfile.production  Dockerfile.staging  Makefile  README.md  env.d.ts  fly.production.toml  fly.staging.toml  fly.toml  fly.worker.production.toml  jest.config.js  package.json  pyproject.toml  render-worker.yaml  render.yaml  render.yml  tailwind.config.js  tsconfig.json  vite.config.js
.devcontainer/: Dockerfile  devcontainer.env.template  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: cron-restart-app.yml  pull-request.yml  release-production.yml  release-staging.yml
app/: admin.py  analytics.py  apps.py  context_processors.py  forms.py  middleware.py  oauth.py  signals.py  slippers_autoload_components.py  storage.py  stripe_webhooks.py  tests.py  urls.py  utils.py  views.py  wagtail_hooks.py  wsgi.py
app/management/commands/: create_gift_sub.py  ensure_stripe_subscriptions_processed.py  get_coords_for_users.py  import_laravel_users.py  mark_coupons_as_legacy.py  migrate_old_stripe_gift_cards.py  migrate_old_stripe_subscriptions.py  reset_db.py  setup_pages.py  start_cron_worker.py  start_worker.py  sync_legacy_gifts_with_stripe.py  sync_legacy_users_with_stripe.py  sync_shopify_products.py  update_subscription.py
app/migrations/: 0001_initial.py  0002_homepage.py  0003_lbcproduct_featuredcontent.py  0004_shippingzone_squashed_0006_alter_shippingzone_code.py  0005_alter_featuredcontent_current_book.py  0005_informationpage.py  0006_blogindexpage_blogpage.py  0006_blogindexpage_customimage_informationpage_blogpage_and_more.py  0006_customimage_homepage_canonical_url_and_more.py  0007_alter_blogpage_feed_image.py  0007_blogpage_feed_image_alter_blogpage_body.py  0007_bookindexpage.py  0007_shippingzone_rate_shippingzone_rate_currency.py  0008_bookpage.py  0008_customimage_informationpage_imagerendition.py  0008_homepage_canonical_url_homepage_og_image_and_more.py  0008_remove_blogpage_date.py  0009_alter_blogpage_body_alter_blogpage_feed_image_and_more.py  0009_alter_blogpage_feed_image.py  0009_alter_bookpage_body.py  0009_blogindexpage_canonical_url_blogindexpage_og_image_and_more.py  0009_bookindexpage_bookpage_merchandisepage_and_more.py  0010_alter_blogpage_body_alter_informationpage_body.py  0010_blogindexpage_canonical_url_blogindexpage_og_image_and_more.py  0010_merchandisepage_remove_bookpage_body.py  0010_user_address1_user_address2_user_birthday_user_city_and_more.py  0011_alter_blogpage_intro.py  0011_remove_featuredcontent_current_book.py  0011_user_old_id_alter_user_address1_alter_user_address2_and_more.py  0012_featuredcontent_current_book.py  0012_lbccustomer.py  0013_alter_bookpage_options_bookpage_published_date.py  0013_lbcsubscription.py  0014_alter_bookpage_options.py  0014_shippingzone_rate_shippingzone_rate_currency.py  0015_shippingzone_rest_of_world.py  0016_alter_shippingzone_countries.py  0017_membershipplanpage_homepage_layout_and_more.py  0018_remove_homepage_body_and_more.py  0019_alter_homepage_layout.py  (+92 more)
app/models/: __init__.py  blocks.py  circle.py  django.py  events.py  legacy.py  readinggroups.py  settings.py  stripe.py  wagtail.py
app/settings/: base.py  dev.py  production.py  staging.py
app/shopify_webhook/: __init__.py  decorators.py  helpers.py  signals.py  views.py
app/shopify_webhook/tests/: __init__.py  test_app_proxy.py  test_webhook.py  urls.py
app/static/: wagtailadmin.css
app/templates/: 404.html  500.html  base.html  components.yaml  layout_page.html
app/templates/account/: base.html  billing.html  cancel.html  email.html  email_confirm.html  gifts.html  login.html  logout.html  membership.html  modal_base.html  password_change.html  password_reset.html  password_reset_from_key.html  password_set.html  provider_panel.html  signup.html
app/templates/app/: batch_update_subscriptions.html  batch_update_subscriptions_batch_table.html  batch_update_subscriptions_status.html  blog_index_page.html  blog_page.html  book_index_page.html  book_page.html  bulk_update_subscription.html  bulk_update_subscription_status.html  completed_gift_purchase.html  completed_gift_redemption.html  completed_membership_purchase.html  confirm_shipping.html  donate.html  donate_success.html  home_page.html  information_page.html  map_page.html  membership_plan_page.html  merchandise_page.html  pick_price_for_product.html  pick_product.html  post_purchase_cleanup.html  post_purchase_success.html  profile.html  redeem.html  redeem_setup.html  refreshed.html  stripe_checkout.html  subscription_error.html  upgrade.html  upgrade_success.html  welcome.html
app/templates/blog/: blog_listing_page.html  blog_page.html
app/templates/components/: breadcrumb_item.html  signup_header.html
app/templates/events/: event_form.html
app/templates/facebook/: pixel.html
app/templatetags/: books.py  brand.py  date.py  gift_card.py  negate.py  setting.py  stripe_price.py  to_date.py  url.py  valid_json.py  with_gift_code.py
app/utils/: __init__.py  abstract_model_querying.py  books.py  cache.py  django.py  geo.py  mailchimp.py  python.py  shopify.py  stripe.py  tests.py
app/wagtail/: settings.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogpage.py
cache/: tmp0t82g09q
frontend/: main.ts  modules.d.ts  posthog.ts  sentry.ts
frontend/controllers/: backlink-controller.ts  coupon-controller.ts  donation-controller.ts  fly-to-map-controller.ts  list-filter-controller.ts  map-click-reading-group-controller.ts  map-geolocator-controller.ts  map-html-bridge-controller.ts  map-scroll-to-html-controller.ts  product-controller.ts  refresh-controller.ts  scroll-into-view-on-event-controller.ts  shipping-controller.ts  shopify-buy-controller-base.ts  zoom-to-postcode-controller.ts  zoom-to-source-features-controller.ts
frontend/scss/: blocks.scss  main.scss  overrides.scss  tailwind.scss  theme.scss  util.scss
(+86 files in other folders)
